完成本地存储

--- a/widget/html/followup/followup.html
+++ b/widget/html/followup/followup.html
@@ -60,7 +60,7 @@ apiready = function() {
         url: './followupFrame.html',
         pageParam: api.pageParam,
         vScrollBarEnabled: false,
-        reload: false,
+        reload: true,
         bounces: false,
         animation: {
             type: "fade",
