--- a/widget/html/followup/followupFrame.html
+++ b/widget/html/followup/followupFrame.html
@@ -97,7 +97,7 @@ function openWin(type) {
         pageParam: {
             data: data
         },
-        reload: false,
+        reload: true,
         bounces: false,
         vScrollBarEnabled: false,
         animation: {
