--- a/widget/html/followup/followupList.html
+++ b/widget/html/followup/followupList.html
@@ -234,7 +234,7 @@ function viewFollowUp(follow_up_id) {
             follow_up_id: follow_up_id
         },
         vScrollBarEnabled: false,
-        reload: false,
+        reload: true,
         bounces: false
     });
 }
@@ -247,7 +247,7 @@ function newFollowUp() {
             history_id: history_id
         },
         vScrollBarEnabled: false,
-        reload: false,
+        reload: true,
         bounces: false
     });
 }
@@ -260,7 +260,7 @@ function modiFollowUp(index) {
             follow_up_id: follow_up_id
         },
         vScrollBarEnabled: false,
-        reload: false,
+        reload: true,
         bounces: false
     });
 }
