--- a/widget/html/history/history.html
+++ b/widget/html/history/history.html
@@ -85,7 +85,7 @@ apiready = function() {
         url: './historyFrame.html',
         pageParam: api.pageParam,
         vScrollBarEnabled: false,
-        reload: false,
+        reload: true,
         bounces: false,
         animation: {
             type: "fade",
