--- a/widget/html/patient/patient.html
+++ b/widget/html/patient/patient.html
@@ -105,7 +105,7 @@ apiready = function() {
         url: './patientFrame.html',
         pageParam: api.pageParam,
         vScrollBarEnabled: false,
-        reload: false,
+        reload: true,
         bounces: false,
         animation: {
             type: "fade",
