--- a/widget/html/patient/viewPatient.html
+++ b/widget/html/patient/viewPatient.html
@@ -182,7 +182,7 @@ function modiPatient() {
             duration: 300
         },
         vScrollBarEnabled: false,
-        reload: false,
+        reload: true,
         bounces: false
     });
 
