--- a/widget/html/physical/physical.html
+++ b/widget/html/physical/physical.html
@@ -169,7 +169,7 @@ apiready = function() {
         url: './physicalFrame.html',
         pageParam: api.pageParam,
         vScrollBarEnabled: false,
-        reload: false,
+        reload: true,
         bounces: false,
         animation: {
             type: "fade",
