--- a/widget/html/physical/viewPhysical.html
+++ b/widget/html/physical/viewPhysical.html
@@ -223,7 +223,7 @@ function modiPhysical() {
             duration: 300
         },
         vScrollBarEnabled: false,
-        reload: false,
+        reload: true,
         bounces: false
     });
 
