--- a/widget/html/followup/viewFollowUp.html
+++ b/widget/html/followup/viewFollowUp.html
@@ -136,7 +136,7 @@ api.openFrame({
     url: './viewFollowUpFrame.html',
     pageParam: api.pageParam,
     vScrollBarEnabled: false,
-    reload: false,
+    reload: true,
     bounces: false,
     animation: {
         type: "fade",
