--- a/widget/html/history/viewHistory.html
+++ b/widget/html/history/viewHistory.html
@@ -162,7 +162,6 @@ function getHistory(history_id) {
  * @return {[type]}      [description]
  */
 function openWin(type) {
-    var reload = false;
     var pageParam = {};
     var animation = null;
     var page = "";
@@ -173,7 +172,6 @@ function openWin(type) {
                 "history_id": history_id,
                 "type": "modi"
             };
-            reload = false;
             break;
         case "viewPatient":
             page = "viewPatient";
@@ -205,7 +203,7 @@ function openWin(type) {
             duration: 300
         },
         vScrollBarEnabled: false,
-        reload: reload,
+        reload: true,
         bounces: false
     });
 }
